# modly-Codex-image-extension

./: .gitignore  CHANGELOG.md  README.md  generator.py  manifest.json  pyproject.toml  setup.py
codex_backend/: __init__.py  adapter.py  contracts.py  errors.py  persistence.py  preflight.py
docs/: architecture.md
docs/decisions/: v1-locks.md
docs/smoke/: manual-smoke.md
tests/contract/: __init__.py  test_manifest_contract.py  test_runtime_evidence_boundary.py
tests/integration/: test_generator_flow.py
tests/unit/: test_adapter_translation.py  test_generator_contract.py  test_persistence.py  test_preflight.py  test_setup_contract.py
