[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modly-codex-image-extension"
version = "0.1.2"
description = "Python-first subprocess backend for the Modly Codex image extension"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["codex_backend*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
